# rinha-de-backend-2025

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf
src/: handlers.rs  main.rs  server.rs
