[package]
name = "rinha-de-backend-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", default-features = false, features = ["rt-multi-thread", "net", "macros", "time"] }
reqwest = { version = "0.12.22", default-features = false, features = ["http2", "rustls-tls", "json"] }
hyper = { version = "1.6.0", default-features = false, features = ["server", "http2"] }
hyper-util = { version = "0.1.14", default-features = false, features = ["server"] }
http-body-util = { version = "0.1.3" }

redis = { version = "0.32.3", default-features = false, features = ["tokio-comp", "connection-manager"] }
actix = { version = "0.13.5" }

serde = { version = "1.0.219" }
uuid = { version = "1.17.0" }
chrono = { version = "0.4.41" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true