[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", default-features = false, features = ["rt-multi-thread", "net", "macros", "time"] }
reqwest = { version = "0.12.22", default-features = false, features = ["http2", "rustls-tls", "json"] }
hyper = { version = "1.6.0", default-features = false, features = ["server", "http2"] }
hyper-util = { version = "0.1.14", default-features = false, features = ["server"] }
http-body-util = { version = "0.1.3" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true